# network-automator

./: .gitignore  Makefile  Pipfile  README.md  install.sh  manage.py  nacli  pyproject.toml  requirements.txt
.ai/: README.md  api-guide.md  architecture.md  development-guide.md  mcp-context.md  project-overview.md  troubleshooting.md
inventory/: devices.yml.example
network_automator/: __init__.py  asgi.py  main.py  settings.py  template_discovery.py  urls.py  wsgi.py
network_automator/drivers/: __init__.py  huawei_vrp5.py  huawei_vrp8.py  routeros7.py
network_automator/render/: __init__.py  render_template.py
network_automator/utils/: __init__.py  get_connection_params.py
network_automator_app/: admin.py  apps.py  models.py
network_automator_app/api/: serializers.py  urls.py  views.py
network_automator_app/migrations/: 0001_initial.py  0002_device_ipv4_address_device_model_device_vendor.py  0003_alter_device_ipv4_address_alter_device_model.py  0004_device_location_device_street_address.py  0005_alter_device_ipv4_address_alter_device_location_and_more.py
templates/huawei_vrp5/: default.j2  full_config.j2
templates/huawei_vrp8/: default.j2  interface_only.j2
templates/routeros7/: default.j2
