[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "network-automator"
version = "1.0.0"
description = "Professional Network Device Configuration Management"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Felipe Padilha", email = "contato@felipepadilha.com.br"},
]
keywords = ["network", "automation", "netdevops", "configuration", "management"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Telecommunications Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Networking",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "bcrypt>=4.0.0",
    "cffi>=1.15.0",
    "cryptography>=41.0.0",
    "invoke>=2.0.0",
    "Jinja2>=3.1.0",
    "markdown-it-py>=3.0.0",
    "MarkupSafe>=2.1.0",
    "mdurl>=0.1.0",
    "netmiko>=4.2.0",
    "ntc-templates>=4.0.0",
    "paramiko>=3.0.0",
    "pycparser>=2.21",
    "Pygments>=2.15.0",
    "PyNaCl>=1.5.0",
    "pyserial>=3.5",
    "PyYAML>=6.0.0",
    "rich>=13.0.0",
    "ruamel.yaml>=0.17.0",
    "scp>=0.14.0",
    "textfsm>=1.1.0",
    "typer[all]>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "flake8>=6.0.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "mkdocstrings>=0.23.0",
]

[project.urls]
Homepage = "https://github.com/padilhafe/network-automator"
Repository = "https://github.com/padilhafe/network-automator.git"
"Bug Tracker" = "https://github.com/padilhafe/network-automator/issues"

[project.scripts]
nacli = "network_automator.main:app"

[tool.setuptools]
packages = ["network_automator", "network_automator.drivers", "network_automator.render", "network_automator.utils"]
include-package-data = true

[tool.setuptools.package-data]
"*" = ["*.yml", "*.yaml", "*.j2", "*.md"]

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | venv
)/
'''

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "netmiko.*",
    "yaml.*",
    "jinja2.*",
]
ignore_missing_imports = true

[tool.coverage.run]
source = ["."]
omit = [
    "*/tests/*",
    "*/test_*",
    "setup.py",
    "venv/*",
    ".venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
